--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intro</title>
-    <script src="main.js" defer></script>
+    <script src="prompt.js" defer></script>
 </head>
 
 <body>
     <h1>JS Intro</h1>
-    <input type="text" />
-    <input type="text" />
+    <p id="render"></p>
 </body>
 
 </html>
