--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intro</title>
-    <script src="uzd1.js" defer></script>
+    <script src="uzd2html.js" defer></script>
 </head>
 
 <body>
